--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,13 +1,33 @@
 <div class="form">
     <%= form_for @user do |f| %>
-        <%= f.label :name %><br>
-        <%= f.text_field :name %><br>
-        
-        <%= f.label :email %><br>
-        <%= f.text_field :email %><br>
 
-        <%= f.label :password %><br>
-        <%= f.text_field :password %><br>
+
+        <% if @user.errors.any? %>
+          <div id="error_explanation">
+            <h2>There were some errors:</h2>
+            <ul>
+              <% @user.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+
+        <div class="field<%= 'field_with_errors' if @user.errors[:name].any? %>">
+          <%= f.label :name %><br>
+          <%= f.text_field :name %><br>
+        </div>
+
+        <div class="field<%= 'field_with_errors' if @user.errors[:email].any? %>">
+          <%= f.label :email %><br>
+          <%= f.text_field :email %><br>
+        </div>
+
+        <div class="field<%= 'field_with_errors' if @user.errors[:password].any? %>">
+          <%= f.label :password %><br>
+          <%= f.text_field :password %><br>
+        </div>
         
         <%= f.submit "Create User" %>
 
