spelling mistake + fixed log in bug

--- a/app/views/board_games/new.html.erb
+++ b/app/views/board_games/new.html.erb
@@ -24,9 +24,9 @@
           <%= f.number_field :time_duration %><br>
         </div>
 
-        <div class="field<%= 'field_with_errors' if @board_game.errors[:dificulty].any? %>">
+        <div class="field<%= 'field_with_errors' if @board_game.errors[:difficulty].any? %>">
           Difficulty rating (out of 5) <br>
-          <%= f.number_field :dificulty %><br>
+          <%= f.number_field :difficulty %><br>
         </div>
         
         
