--- a/app/views/board_games/show.html.erb
+++ b/app/views/board_games/show.html.erb
@@ -2,6 +2,6 @@
 
 <p>Time duration of the game: <%= @board_game.time_duration %>min</p>
 
-<p>Difficulty rating: <%= @board_game.dificulty %>/5</p>
+<p>Difficulty rating: <%= @board_game.difficulty %>/5</p>
 
 <p>Rules: <%= @board_game.rules %></p>
