--- a/app/views/board_games/index.html.erb
+++ b/app/views/board_games/index.html.erb
@@ -1,5 +1,8 @@
 <ul>
 <% @board_games.each do |board_game| %>
     <li><a href="<%= board_game_path(board_game) %>"><%= board_game.name %> </a>
+        
 <% end %>
 </ul>
+
+<p>Couldn't find the game you're looking for? <a href="<%=new_board_game_path%>">Create it!</a></p>
