--- a/app/views/board_games/show.html.erb
+++ b/app/views/board_games/show.html.erb
@@ -5,3 +5,9 @@
 <p>Difficulty rating: <%= @board_game.difficulty %>/5</p>
 
 <p>Rules: <%= @board_game.rules %></p>
+
+<%= form_for @game do |f| %>
+    <%= f.hidden_field :user_id, value: @game.user_id %>
+    <%= f.hidden_field :board_game_id, value: @game.board_game_id %>
+    <%= submit_tag "Play this game"%>
+<% end %>
