Add view for search bar (Not working??)

--- a/app/views/board_games/index.html.erb
+++ b/app/views/board_games/index.html.erb
@@ -1,8 +1,16 @@
+
+<%= form_with url: board_games_path, method: 'get' do |f| %>
+    <%= f.label(:query, "Search name of game:") %>
+    <%= f.text_field(:query) %>
+    <%= submit_tag("Search") %>
+  <% end %>
+
+
+
 <ul>
-<% @board_games.each do |board_game| %>
-    <li><a href="<%= board_game_path(board_game) %>"><%= board_game.name %> </a>
-        
-<% end %>
+    <% @board_games.each do |board_game| %>
+        <li><a href="<%= board_game_path(board_game) %>"><%= board_game.name %> </a>
+    <% end %>
 </ul>
 
 <p>Couldn't find the game you're looking for? <a href="<%=new_board_game_path%>">Create it!</a></p>
