--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
 <% @users.each do |user| %>
-    <li><%= user.name %> 
+    <li><%= link_to user.name, user_board_games_path(user) %>
 <% end %>
 </ul>
