--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,11 @@
         <nav>
           <ul class="nav-list">
             <li>
-              <a href="<%= users_path %>">Registered Users</a>
+              <%= link_to "Registered Users", users_path %>
             </li>
 
             <li>
-              <a href="<%= board_games_path %>">Board Games</a>
+              <%= link_to "Board Games", board_games_path %>
             </li>
 
             <li>
