research bar now looks through the users games and not all games

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,12 @@
       </div>
     </section>
 
-
+    <% flash.each do |type, msg| %>
+      <div>
+        <%= msg %>
+      </div>
+    <% end %>
+    
     <%= yield %>
   </body>
 </html>
