--- a/app/views/board_games/new.html.erb
+++ b/app/views/board_games/new.html.erb
@@ -5,11 +5,11 @@
         <% if @board_game.errors.any? %>
           <div id="error_explanation">
             <h2>There were some errors:</h2>
-            <ul>
+            <ol class="gradient-list">
               <% @board_game.errors.full_messages.each do |message| %>
                 <li><%= message %></li>
               <% end %>
-            </ul>
+            </ol>
           </div>
         <% end %>
 
