--- a/app/views/board_games/index.html.erb
+++ b/app/views/board_games/index.html.erb
@@ -1,17 +1,17 @@
 
-<%= form_for :board_game, url: url_for_form_for_search_bar, method: 'get' do |f| %>
-    <%= f.label(:query, "Search name of game:") %>
-    <%= f.text_field(:query) %>
+<%= form_for :board_game, url: url_for_form_for_search_bar, method: 'get',  html: {class: "searchform cf"} do |f| %>
+
+    <%= f.text_field :query, placeholder: "Search name of game:"%>
     <%= submit_tag("Search") %>
 <% end %>
-
+<br>
 
 <%= display_user_name_if_not_current %><br>
 
-<ul>
+<ol class="gradient-list">
     <% @board_games.each do |board_game| %>
         <li><%= link_to board_game.name, board_game_path(board_game) %></li>
     <% end %>
-</ul>
+</ol>
 
 <p>Couldn't find the game you're looking for? <%= link_to "Create it!", new_board_game_path %></p>
