--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @user.name %></h1>
 <p>Here are the games <%= @user.name %> has played</p>
-<ul>
+<ol class="gradient-list">
     <% @user.board_games.each do |g| %>
         <li><%= link_to g.name, board_game_path(g) %>
     <% end %>
-</ul>
+</ol>
