--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -67,3 +67,7 @@ input {
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
   }
+
+  .field_with_errors {
+    color: red;
+  }
