Better design + fixed broken links

--- a/app/views/board_games/index.html.erb
+++ b/app/views/board_games/index.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 <br>
 
-<%= display_user_name_if_not_current %><br>
+<h3><%= display_user_name_if_not_current %></h3><br>
 
 <ol class="gradient-list">
     <% @board_games.each do |board_game| %>
