--- a/app/views/board_games/new.html.erb
+++ b/app/views/board_games/new.html.erb
@@ -1,43 +1,45 @@
-<div class="form">
-  <h1>Create a Board Game</h1>
-    <%= form_for @board_game do |f| %>
+<div class="wrapper">
+  <div class="form">
+    <h1>Create a Board Game</h1>
+      <%= form_for @board_game do |f| %>
 
-        <% if @board_game.errors.any? %>
-          <div id="error_explanation">
-            <h2>There were some errors:</h2>
-            <ol class="gradient-list">
-              <% @board_game.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-              <% end %>
-            </ol>
+          <% if @board_game.errors.any? %>
+            <div id="error_explanation">
+              <h2>There were some errors:</h2>
+              <ul>
+                <% @board_game.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
+
+
+          <div class="field<%= 'field_with_errors' if @board_game.errors[:name].any? %>">
+            <%= f.label :name %><br>
+            <%= f.text_field :name %><br>
           </div>
-        <% end %>
 
+          <div class="field<%= 'field_with_errors' if @board_game.errors[:time_duration].any? %>">
+            <%= f.label :time_duration, "Esitimated duration of the game in minuites"%><br>
+            <%= f.number_field :time_duration %><br>
+          </div>
 
-        <div class="field<%= 'field_with_errors' if @board_game.errors[:name].any? %>">
-          <%= f.label :name %><br>
-          <%= f.text_field :name %><br>
-        </div>
+          <div class="field<%= 'field_with_errors' if @board_game.errors[:difficulty].any? %>">
+            <%= f.label :difficulty, "Difficulty rating (out of 5)" %><br>
+            <%= f.number_field :difficulty %><br>
+          </div>
+          
+          
+          
+          <div class="field<%= 'field_with_errors' if @board_game.errors[:rules].any? %>">
+              <%= f.label :rules %><br>
+              <%= f.text_area :rules %><br>
+          </div>
+          
+          <%= f.submit "Create Board Game" %>
 
-        <div class="field<%= 'field_with_errors' if @board_game.errors[:time_duration].any? %>">
-          Esitimated duration of the game in minuites<br>
-          <%= f.number_field :time_duration %><br>
-        </div>
-
-        <div class="field<%= 'field_with_errors' if @board_game.errors[:difficulty].any? %>">
-          Difficulty rating (out of 5) <br>
-          <%= f.number_field :difficulty %><br>
-        </div>
-        
-        
-        
-        <div class="field<%= 'field_with_errors' if @board_game.errors[:rules].any? %>">
-            <%= f.label :rules %><br>
-            <%= f.text_area :rules %><br>
-        </div>
-        
-        <%= f.submit "Create Board Game" %>
-
-    <% end %>
-    
+      <% end %>
+      
+  </div>
 </div>
