--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <ol class="gradient-list">
     <% @users.each do |user| %>
-        <li><%= link_to user.name, user_board_games_path(user) %>
+        <li><%= link_to user.name, user_games_path(user) %>
     <% end %>
 </ol>
