--- a/app/views/board_games/show.html.erb
+++ b/app/views/board_games/show.html.erb
@@ -10,5 +10,6 @@
 <%= form_for @game do |f| %>
     <%= f.hidden_field :user_id, value: @game.user_id %>
     <%= f.hidden_field :board_game_id, value: @game.board_game_id %>
+    <%= f.text_area :comment %>
     <%= submit_tag "Play this game"%>
 <% end %>
